--- a/index.html
+++ b/index.html
@@ -20,6 +20,16 @@
   <meta property="og:image" content="http://pocketreporter.co.za/img/logo.png" />
   <meta property="og:url" content="http://pocketreporter.co.za" />
 
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-48399585-51"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+  
+    gtag('config', 'UA-48399585-51');
+  </script>
+
   <link rel="stylesheet" href="css/bootstrap.min.css">
   <link rel="stylesheet" href="css/font-awesome.min.css">
   <link rel="stylesheet" href="css/roboto.css">
