--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
   <meta property="og:site_name" content="Pocket Reporter" />
   <meta property="og:description" content="Pocket Reporter guides you through the news gathering process to help you be a better reporter." />
   <meta property="og:type" content="website" />
-  <meta property="og:image" content="http://pocketreporter.co.za/img/logo.png" />
-  <meta property="og:url" content="http://pocketreporter.co.za" />
+  <meta property="og:image" content="https//pocketreporter.co.za/img/logo.png" />
+  <meta property="og:url" content="https//pocketreporter.co.za" />
 
   <!-- Global site tag (gtag.js) - Google Analytics -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=UA-48399585-51"></script>
@@ -37,7 +37,7 @@
 </head>
 <body>
   <!--[if lt IE 8]>
-    <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
+    <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="https//browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
   <![endif]-->
   <div class="container">
     <div class="row">
@@ -354,7 +354,7 @@
 
         <p>{{_ 'about.builtby' }}</p>
 
-        <a href="http://pocketreporter.co.za/" target="_blank" class="btn btn-success btn-block">PocketReporter.co.za</a>
+        <a href="https//pocketreporter.co.za/" target="_blank" class="btn btn-success btn-block">PocketReporter.co.za</a>
       </section>
 
       <section>
