Adds CSS changes

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
   <meta name="description" content="Pocket Reporter helps you be a better reporter by guiding you through the news gathering process.">
   <meta property="og:title" content="Pocket Reporter helps you be a better reporter" />
-  <meta property="og:site_name" content="Pocket Reporter" />top
+  <meta property="og:site_name" content="Pocket Reporter" />
   <meta property="og:description" content="Pocket Reporter guides you through the news gathering process to help you be a better reporter." />
   <meta property="og:type" content="website" />
   <meta property="og:image" content="https//pocketreporter.co.za/img/logo.png" />
