--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="default">
+  <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
+  <link rel="icon" href="/favicon.ico" type="image/x-icon">
 
   <meta name="description" content="Pocket Reporter helps you be a better reporter by guiding you through the news gathering process.">
   <meta property="og:title" content="Pocket Reporter helps you be a better reporter" />
