--- a/index.html
+++ b/index.html
@@ -22,11 +22,12 @@
   <meta property="og:image" content="https//pocketreporter.co.za/img/logo.png" />
   <meta property="og:url" content="https//pocketreporter.co.za" />
 
+  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-48399585-51"></script>
   <script>
-    (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-    (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-    m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-    })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+  </script>
 
 
     ga('create', 'UA-48399585-51', 'auto');
