Adds share notice

--- a/index.html
+++ b/index.html
@@ -125,6 +125,11 @@
 
       <article class="with-header with-footer box-sections collapsible-sections">
 
+        <div class="notice">
+          <p>Pocket Reporter is a free tool, supported exclusively by donor funding.</p>
+          <p>Please share your stories that have been succesfully published with us at <a href="mailto:info@openup.org.za">info@openup.org.za</a>.</p>
+        </div>
+
         {{#if stories}}
 
           <section>
