Add and update notices

--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
 
         <div class="notice">
           <p>Pocket Reporter is a free tool, supported exclusively by donor funding.</p>
-          <p>Please share your stories that have been succesfully published with us at <a href="mailto:info@openup.org.za">info@openup.org.za</a>.</p>
+          <p>Please share stories that have been published via Pocket Reporter with us at <a href="mailto:info@openup.org.za">info@openup.org.za</a>.</p>
         </div>
 
         {{#if stories}}
@@ -225,6 +225,10 @@
         <h2>{{_ 'story.completed' }}</h2>
 
         <button class="btn btn-link share success">{{_ 'story.email_now' }}</button>
+      </div>
+
+      <div class="notice red">
+        <p>If <strong>EMAIL STORY</strong> does not work please change to the latest version of Chrome</p>
       </div>
 
       <footer class="text-right">
