--- a/index.html
+++ b/index.html
@@ -227,14 +227,20 @@
         <button class="btn btn-link share success">{{_ 'story.email_now' }}</button>
       </div>
 
-      <div class="notice red">
+      <div class="notice">
         <p>If <strong>EMAIL STORY</strong> does not work please change to the latest version of Chrome</p>
       </div>
 
-      <footer class="text-right">
-        <button type="button" class="btn btn-link success share">{{_ 'story.email_story' }}</button>
-        <br>
-        <button type="button" class="btn btn-link danger delete">{{_ 'story.delete_story' }}</button>
+      <footer class="container text-right w-full">
+        <button 
+          type="button"
+          class="btn btn-outline-success uppercase"
+          href="whatsapp://send?text=__SLUG__HERE__"
+        >
+          Share media
+        </button>
+        <button type="button" class="btn btn-success share uppercase">{{_ 'story.email_story' }}</button>
+        <button type="button" class="btn btn-link danger delete pull-left">{{_ 'story.delete_story' }}</button>
       </footer>
     </article>
   </script>
