Removes prepending text from slug

--- a/index.html
+++ b/index.html
@@ -235,7 +235,7 @@
         <button 
           type="button"
           class="btn btn-outline-success uppercase"
-          href="whatsapp://send?text=slug:%20'{{ story.title }}'"
+          href="whatsapp://send?text={{ story.title }}"
         >
           Share media
         </button>
