Changes wording on email error prompt

--- a/index.html
+++ b/index.html
@@ -228,7 +228,7 @@
       </div>
 
       <div class="notice">
-        <p>If <strong>EMAIL STORY</strong> does not work please change to the latest version of Chrome</p>
+        <p>If email submission does not work please change to the latest version of Chrome</p>
       </div>
 
       <footer class="container text-right w-full">
