--- a/index.html
+++ b/index.html
@@ -227,20 +227,20 @@
         <button class="btn btn-link share success">{{_ 'story.email_now' }}</button>
       </div>
 
-      <div class="notice">
+      <div class="notice mb-12">
         <p>If email submission does not work please change to the latest version of Chrome</p>
       </div>
 
       <footer class="container text-right w-full">
         <a 
           type="button"
-          class="btn btn-outline-success uppercase"
+          class="btn btn-outline-success uppercase submit-button"
           href="whatsapp://send?text={{ story.title }}"
         >
-          Share media
+          Send media by Whatsapp
         </a>
-        <button type="button" class="btn btn-success share uppercase">{{_ 'story.email_story' }}</button>
-        <button type="button" class="btn btn-link danger delete pull-left">{{_ 'story.delete_story' }}</button>
+        <button type="button" class="btn btn-success share uppercase submit-button">{{_ 'story.email_story' }}</button>
+        <button type="button" class="btn btn-link danger delete pull-left submit-button">{{_ 'story.delete_story' }}</button>
       </footer>
     </article>
   </script>
