--- a/index.html
+++ b/index.html
@@ -125,10 +125,12 @@
 
       <article class="with-header with-footer box-sections collapsible-sections">
 
-        <div class="notice">
-          <p>Pocket Reporter is a free tool, supported exclusively by donor funding.</p>
-          <p>Please share stories that have been published via Pocket Reporter with us at <a href="mailto:info@openup.org.za">info@openup.org.za</a>.</p>
-        </div>
+        <container>
+          <div class="notice mb-8">
+            <p>Pocket Reporter is a free tool, supported exclusively by donor funding.</p>
+            <p>Please share stories that have been published via Pocket Reporter with us at <a href="mailto:info@openup.org.za">info@openup.org.za</a>.</p>
+          </div>
+        </container>
 
         {{#if stories}}
 
@@ -230,7 +232,7 @@
       <footer class="container text-right w-full">
         <a 
           type="button"
-          class="btn btn-default uppercase submit-button w-full mb-12"
+          class="btn btn-default uppercase submit-button w-full mb-12 visible-xs"
           href="whatsapp://send?text={{ story.title }}"
         >
           Send media by Whatsapp
