Fixes issue with heading

--- a/index.html
+++ b/index.html
@@ -258,9 +258,10 @@
                 <a href="#add" class="back"><i class="fa fa-chevron-left" aria-hidden="true"></i></a>
                 <h1>{{ title }} Topics</h1>
               {{else if topic}}
+              <div>asdasd</div>
                 <a href="#add" class="back"><i class="fa fa-chevron-left" aria-hidden="true"></i></a>
                 <h1>{{ title }}</h1>
-              {{else if story}}
+              {{else}}
                 <h1>{{_ 'story.new_story' }}</h1>
               {{/if}}
             </header>
