--- a/index.html
+++ b/index.html
@@ -254,15 +254,8 @@
         <div class="row">
           <div class="col-md-6 center-col">
             <header id="app-header">
-              {{#if category}}
-                <a href="#add" class="back"><i class="fa fa-chevron-left" aria-hidden="true"></i></a>
-                <h1>{{ title }} Topics</h1>
-              {{else if topic}}
-                <a href="#add" class="back"><i class="fa fa-chevron-left" aria-hidden="true"></i></a>
-                <h1>{{ title }}</h1>
-              {{else}}
-                <h1>{{_ 'story.new_story' }}</h1>
-              {{/if}}
+              <a href="#add" class="back"><i class="fa fa-chevron-left" aria-hidden="true"></i></a>
+              <h1>{{_ 'story.new_story' }}</h1>
             </header>
           </div>
         </div>
@@ -277,22 +270,22 @@
           {{#if categoriesList}}
             {{#each categoriesList}}
               <li>
-                <a href="{{ ../baseUrl }}{{ id }}"><i class="fa {{ icon }} addButton"></i><br>{{ name }}</a>
+                <a href="#add/{{ id }}"><i class="fa {{ icon }} addButton"></i><br>{{ name }}</a>
               </li>
             {{/each}}
           {{/if}}
 
-          {{#if category}}
-            {{#each category}}
+          {{#if topicsList}}
+            {{#each topicsList}}
               <li>
-                <a href="{{ ../baseUrl }}{{ id }}"><i class="fa {{ icon }} addButton"></i><br>{{ name }}</a>
+                <a href="#add/{{ ../categoryId }}/{{ id }}"><i class="fa {{ icon }} addButton"></i><br>{{ name }}</a>
               </li>
             {{/each}}
           {{/if}}
         </ul>
       </section>
 
-      {{#if story}}
+      {{#if topic}}
         <section class="name-section">
           <input type="text" class="form-control" name="title">
         </section>
