Refactors feature into existing Backbone structure

--- a/index.html
+++ b/index.html
@@ -334,7 +334,7 @@
 
           {{#if custom}}
             <li class="is-custom">
-              <a href="/#add-custom"><i class="fa fa-plus addButton"></i><br>Add custom template</a>
+              <a href="/#add-custom-template"><i class="fa fa-plus addButton"></i><br>Add custom template</a>
             </li>
           {{/if}}
         </ul>
@@ -478,7 +478,7 @@
     </article>
   </script>
 
-  <script src="js/OfflineEventQue.js"></script>
+  <script src="js/vendor/sanitize-html-1.18.4.min.js"></script>
   <script src="js/vendor/jquery-1.11.2.min.js"></script>
   <script src="js/vendor/bootstrap-3.3.1.min.js"></script>
   <script src="js/vendor/handlebars-v4.0.5.js"></script>
@@ -491,12 +491,13 @@
   <script src="js/vendor/jquery.autogrow-textarea.js"></script>
   <script src="js/vendor/polyglot.min.js"></script>
 
+  <script src="js/OfflineEventQue.js"></script>
   <script src="js/categories.js"></script>
   <script src="js/l10n.js"></script>
   <script src="js/helpers.js"></script>
   <script src="js/models.js"></script>
   <script src="js/topics.js"></script>
-  <script src="js/views/add_custom.js"></script>
+  <script src="js/views/add_custom_template.js"></script>
   <script src="js/views/footer.js"></script>
   <script src="js/views/home.js"></script>
   <script src="js/views/add_story.js"></script>
