Removes redundant HTML

--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
 
       <article class="with-header with-footer box-sections collapsible-sections">
 
-        <div class="notice mb-8">
+        <div class="notice">
           <p>Pocket Reporter is a free tool, supported exclusively by donor funding.</p>
           <p>Please share stories that have been published via Pocket Reporter with us at <a href="mailto:info@openup.org.za">info@openup.org.za</a>.</p>
         </div>
@@ -339,11 +339,9 @@
       </section>
 
       {{#if custom}}
-        <div class="container">
-          <div class="notice mb-8">
-              <p>You need to be a pre-approved contributor in order to create and/or share your own custom templates.</p>
-              <p>If you are interested in contributing please send us an email to <a href="rayjoe@iafrica.com">rayjoe@iafrica.com</a>.</p>
-          </div>
+        <div class="notice">
+            <p>You need to be a pre-approved contributor in order to create and/or share your own custom templates.</p>
+            <p>If you are interested in contributing please send us an email to <a href="rayjoe@iafrica.com">rayjoe@iafrica.com</a>.</p>
         </div>
       {{/if}}
 
