Adds SAMIP logo

--- a/index.html
+++ b/index.html
@@ -465,6 +465,9 @@
             <img src="img/nqabile-logo.png" class="logo nqabile img-responsive">
           </div>
         </div>
+        <div>
+          <img src="img/samip-logo.png" class="logo nqabile img-responsive">
+        </div>
       </section>
 
       <section>
