Adds ability to share story via Whatsapp

--- a/index.html
+++ b/index.html
@@ -231,7 +231,7 @@
         <a 
           type="button"
           class="btn btn-default uppercase submit-button w-full mb-12 visible-xs"
-          href="whatsapp://send?text={{ story.title }}"
+          href="https://api.whatsapp.com/send?text={{ story.title }}"
         >
           Send media by Whatsapp
         </a>
@@ -240,7 +240,8 @@
           <p>If email submission does not work please change to the latest version of Chrome</p>
         </div>
 
-        <button type="button" class="btn btn-success share uppercase submit-button">{{_ 'story.email_story' }}</button>
+        <button type="button" class="btn share uppercase submit-button">{{_ 'story.email_story' }}</button>
+        <button type="button" class="btn btn-success whatsapp uppercase submit-button">Whatsapp story</button>
         <button type="button" class="btn btn-link danger delete pull-left submit-button">{{_ 'story.delete_story' }}</button>
       </footer>
     </article>
