--- a/index.html
+++ b/index.html
@@ -228,20 +228,12 @@
       </div>
 
       <footer class="container text-right w-full">
-        <a 
-          type="button"
-          class="btn btn-default uppercase submit-button w-full mb-12 visible-xs"
-          href="https://api.whatsapp.com/send?text={{ story.title }}"
-        >
-          Send media by Whatsapp
-        </a>
-
         <div class="notice mb-8">
           <p>If email submission does not work please change to the latest version of Chrome</p>
         </div>
 
         <button type="button" class="btn share uppercase submit-button">{{_ 'story.email_story' }}</button>
-        <button type="button" class="btn btn-success whatsapp uppercase submit-button">Whatsapp story</button>
+        <button type="button" class="btn btn-success whatsapp uppercase submit-button">Send story and media via WhatsApp</button>
         <button type="button" class="btn btn-link danger delete pull-left submit-button">{{_ 'story.delete_story' }}</button>
       </footer>
     </article>
